reformat codebase