@@ -64,50 +64,42 @@ class TraceEventConverterTest {
     @Test
     void testDecisionHasSucceeded() {
         assertFalse(TraceEventConverter.decisionHasSucceeded(
-                null
-        ), "Decision must be failed if input list is null");
+                null), "Decision must be failed if input list is null");
 
         assertTrue(TraceEventConverter.decisionHasSucceeded(
-                Collections.emptyList()
-        ), "Decision must be succeeeded if input list is empty");
+                Collections.emptyList()), "Decision must be succeeeded if input list is empty");
 
         assertTrue(TraceEventConverter.decisionHasSucceeded(List.of(
                 buildTraceOutputValue(DecisionEvaluationStatus.SUCCEEDED, false),
                 buildTraceOutputValue(DecisionEvaluationStatus.SKIPPED, false),
-                buildTraceOutputValue(DecisionEvaluationStatus.NOT_EVALUATED, false)
-        )), "Decision must be succeeded if there are no outputs with 'FAILED' status or containing error messages");
+                buildTraceOutputValue(DecisionEvaluationStatus.NOT_EVALUATED, false))), "Decision must be succeeded if there are no outputs with 'FAILED' status or containing error messages");
 
         assertFalse(TraceEventConverter.decisionHasSucceeded(List.of(
                 buildTraceOutputValue(DecisionEvaluationStatus.SUCCEEDED, false),
-                buildTraceOutputValue(DecisionEvaluationStatus.FAILED, false)
-        )), "Decision must be failed if at least one output has 'FAILED' status");
+                buildTraceOutputValue(DecisionEvaluationStatus.FAILED, false))), "Decision must be failed if at least one output has 'FAILED' status");
 
         assertFalse(TraceEventConverter.decisionHasSucceeded(List.of(
                 buildTraceOutputValue(DecisionEvaluationStatus.SUCCEEDED, false),
-                buildTraceOutputValue(DecisionEvaluationStatus.SKIPPED, true)
-        )), "Decision must be failed if at least one output contains error messages");
+                buildTraceOutputValue(DecisionEvaluationStatus.SKIPPED, true))), "Decision must be failed if at least one output contains error messages");
 
         assertFalse(TraceEventConverter.decisionHasSucceeded(List.of(
                 buildTraceOutputValue(DecisionEvaluationStatus.SUCCEEDED, false),
-                buildTraceOutputValue(DecisionEvaluationStatus.NOT_EVALUATED, true)
-        )), "Decision must be failed if at least one output contains error messages");
+                buildTraceOutputValue(DecisionEvaluationStatus.NOT_EVALUATED, true))), "Decision must be failed if at least one output contains error messages");
 
         assertFalse(TraceEventConverter.decisionHasSucceeded(List.of(
                 buildTraceOutputValue(DecisionEvaluationStatus.SKIPPED, true),
-                buildTraceOutputValue(DecisionEvaluationStatus.FAILED, false)
-        )), "Decision must be failed if at least one output has 'FAILED' status or contains error messages");
+                buildTraceOutputValue(DecisionEvaluationStatus.FAILED, false))), "Decision must be failed if at least one output has 'FAILED' status or contains error messages");
 
         assertFalse(TraceEventConverter.decisionHasSucceeded(List.of(
                 buildTraceOutputValue(DecisionEvaluationStatus.NOT_EVALUATED, true),
-                buildTraceOutputValue(DecisionEvaluationStatus.FAILED, true)
-        )), "Decision must be failed if at least one output has 'FAILED' status or contains error messages");
+                buildTraceOutputValue(DecisionEvaluationStatus.FAILED, true))), "Decision must be failed if at least one output has 'FAILED' status or contains error messages");
     }
 
     private static TraceOutputValue buildTraceOutputValue(DecisionEvaluationStatus status, boolean withErrorMessage) {
         String id = UUID.randomUUID().toString();
         List<Message> messages = withErrorMessage
-            ? List.of(new Message(MessageLevel.ERROR, MessageCategory.INTERNAL, "TEST", id, "Error message", null, null))
-            : Collections.emptyList();
+                ? List.of(new Message(MessageLevel.ERROR, MessageCategory.INTERNAL, "TEST", id, "Error message", null, null))
+                : Collections.emptyList();
         return new TraceOutputValue(id, "Output", status.name(), null, null, messages);
     }
 }
